welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:7: error: ')' expected but 'return' found.
						return false})
                                                ^arrayFront9:7: error: ';' expected but ')' found.
						return false})
                                                             ^arrayFront9:9: error: Unmatched closing brace '}' ignored here
 }
 ^